fix(textbox): fixed input overflow background

--- a/src/sass/textbox/textbox.scss
+++ b/src/sass/textbox/textbox.scss
@@ -21,6 +21,7 @@
 
     /* to align with buttons and select, it needs same font-size */
     font-size: var(--font-size-default);
+    overflow: hidden;
     position: relative;
     width: fit-content;
     gap: var(--spacing-100);
